--- a/App/templates/ejemplar/altaEjemplar.html
+++ b/App/templates/ejemplar/altaEjemplar.html
@@ -13,7 +13,7 @@
                 <form action="{{ url_for('guardarEjemplar')}}" method="POST">
                     <div class="form-group">
                         <label for="numeroSerie">Número de serie del ejemplar</label>
-                        <input type="text" class="form-control" name="numeroSerie" id="numeroSerie" placeholder="Ingresar el número de serie del ejemplar">
+                        <input required type="text" class="form-control" name="numeroSerie" id="numeroSerie" placeholder="Ingresar el número de serie del ejemplar" maxlength="50">
                     </div>
                     <!-- <div class="form-group">
                         <label for="vendido">¿Producto vendido? (0: False - 1:True)</label>
