--- a/App/templates/ejemplar/modificarEjemplar.html
+++ b/App/templates/ejemplar/modificarEjemplar.html
@@ -7,22 +7,23 @@
     <div class="container p-2">
         <h2>Modificar ejemplar</h2>
         <form action="editarEjemplar" method="POST">
+            <input value="{{idProducto}}" type="hidden" class="form-control" name="idProducto" id="idProducto">
             <div class="form-group">
                 <label for="numeroSerie">Número de serie  del ejemplar a modificar</label>
-                <input type="text" class="form-control" name="numeroSerie" id="numeroSerie" placeholder="Ingresar el número de serie">
+                <input readonly value="{{numeroSerie}}" type="text" class="form-control" name="numeroSerie" id="numeroSerie" placeholder="Ingresar el número de serie">
             </div>
             <div class="form-group">
                 <label for="nuevoNumeroSerie">Nuevo numero de serie</label>
-                <input type="text" class="form-control" name="nuevoNumeroSerie" id="nuevoNumeroSerie" placeholder="Ingresar numero de serie">
+                <input type="text" class="form-control" name="nuevoNumeroSerie" id="nuevoNumeroSerie" placeholder="Ingresar numero de serie" maxlength="50">
             </div>
-            <div class="form-group">
+<!--             <div class="form-group">
                 <label for="nuevoVendido">¿Producto vendido?</label>
                 <input type="text" class="form-control" name="nuevoVendido" id="nuevoVendido" placeholder="true or false">
             </div>
             <div class="form-group">
                 <label for="nuevoProducto">Nuevo id de producto</label>
                 <input type="number" class="form-control" name="nuevoProducto" id="nuevoProducto" placeholder="Ingresar el código del producto">
-            </div>
+            </div> -->
             <button type="submit" class="btn btn-primary">Aceptar</button>
 			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
