--- a/App/templates/marca/altaMarca.html
+++ b/App/templates/marca/altaMarca.html
@@ -13,7 +13,7 @@
                 <form action="guardarMarca" method="POST">
                     <div class="form-group">
                         <label for="nombre">Nombre de la marca</label>
-                        <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre de la marca">
+                        <input required type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre de la marca" maxlength="30">
                     </div>
                     <button type="submit" class="btn btn-primary">Aceptar</button>
                     <a class="btn btn-danger" href="/marcaABMC" role="button">Cancelar</a>
