--- a/App/templates/marca/modificarMarca.html
+++ b/App/templates/marca/modificarMarca.html
@@ -14,7 +14,7 @@
                 <form action="{{ url_for('editarMarca')}}" method="POST">
                     <div class="form-group">
                         <label for="nombre">Nombre de la marca a modificar</label>
-                        <input readonly value="{{data[1]}}" type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre de la marca">
+                        <input readonly value="{{data[1]}}" type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre de la marca" maxlength="30">
                     </div>
                     <div class="form-group">
                         <label for="nombreNuevo">Nuevo nombre de la marca</label>
