--- a/App/templates/producto/modificarProducto.html
+++ b/App/templates/producto/modificarProducto.html
@@ -22,7 +22,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="nuevoNombre">Nuevo nombre del producto</label>
-                                <input value="{{data['producto'][1]}}" type="text" class="form-control" name="nuevoNombre" id="nuevoNombre" placeholder="Ingresar nombre del producto">
+                                <input value="{{data['producto'][1]}}" type="text" class="form-control" name="nuevoNombre" id="nuevoNombre" placeholder="Ingresar nombre del producto" maxlength="30" minlength="1">
                             </div>
                         </div>
                     </div>
@@ -32,14 +32,14 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="nuevaDescripcion">Nueva descripcion del producto</label>
-                                <input value="{{data['producto'][2]}}" type="text" class="form-control" name="nuevaDescripcion" id="nuevaDescripcion" placeholder="Ingresar la descripcion del producto">
+                                <input value="{{data['producto'][2]}}" type="text" class="form-control" name="nuevaDescripcion" id="nuevaDescripcion" placeholder="Ingresar la descripcion del producto" maxlength="1000" minlength="1">
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="nuevoPrecio">Nuevo precio del producto</label>
-                                <input value="{{data['producto'][3]}}" type="number" class="form-control" name="nuevoPrecio" id="nuevoPrecio" placeholder="Ingresar el precio del producto">
+                                <input value="{{data['producto'][3]}}" type="number" class="form-control" name="nuevoPrecio" id="nuevoPrecio" placeholder="Ingresar el precio del producto" min="1">
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="nuevoModelo">Nuevo modelo del producto</label>
-                                <input value="{{data['producto'][4]}}" type="text" class="form-control" name="nuevoModelo" id="nuevoModelo" placeholder="Ingresar el modelo del producto">
+                                <input value="{{data['producto'][4]}}" type="text" class="form-control" name="nuevoModelo" id="nuevoModelo" placeholder="Ingresar el modelo del producto" maxlength="30">
                             </div>
                         </div>
                         <div class="col-md-6">
