--- a/App/templates/rol/altaRol.html
+++ b/App/templates/rol/altaRol.html
@@ -14,7 +14,7 @@
                     <form action="guardarRol" method="POST">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Nombre del rol</label>
-                            <input type="text" class="form-control" name="nombreRol" id="nombreRol" placeholder="Ingresar nombre del rol">
+                            <input type="text" required class="form-control" name="nombreRol" id="nombreRol" placeholder="Ingresar nombre del rol" maxlength="30">
                         </div>
                         <button type="submit" class="btn btn-primary">Aceptar</button>
                         <a class="btn btn-danger" href="/" role="button">Cancelar</a>
