--- a/App/templates/rol/modificarRol.html
+++ b/App/templates/rol/modificarRol.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="form-group">
                         <label for="nombreNuevoRol">Nuevo nombre del rol</label>
-                        <input type="text" class="form-control" name="nombreNuevoRol" id="nombreNuevoRol" placeholder="Ingresar nombre del rol">
+                        <input required type="text" class="form-control" name="nombreNuevoRol" id="nombreNuevoRol" placeholder="Ingresar nombre del rol" maxlength="30">
                     </div>
                     <button type="submit" class="btn btn-primary">Aceptar</button>
                     <a class="btn btn-danger" href="/" role="button">Cancelar</a>
