--- a/App/templates/usuario/altaUsuario.html
+++ b/App/templates/usuario/altaUsuario.html
@@ -13,19 +13,19 @@
                 <form action="guardarUsuario" method="POST">
                     <div class="form-group">
                         <label for="nombreUsuario">Email</label>
-                        <input type="email" class="form-control" name="nombreUsuario" id="nombreUSuario" placeholder="Ingresar el nombre del usuario">
+                        <input type="email" class="form-control" required name="nombreUsuario" id="nombreUSuario" placeholder="Ingresar el nombre del usuario" maxlength="150">
                     </div>
                     <div class="form-group">
                         <label for="contrasenia">Contraseña</label>
-                        <input type="password" class="form-control" name="contrasenia" id="contrasenia" placeholder="Ingresar la contrasenia">
+                        <input type="password" class="form-control" required name="contrasenia" id="contrasenia" placeholder="Ingresar la contrasenia" minlength="8" maxlength="20">
                     </div>
                     <div class="form-group">
                         <label for="contrasenia_confirmacion">Confirmar contraseña</label>
-                        <input type="password" class="form-control" name="contrasenia_confirmacion" id="contrasenia_confirmacion" placeholder="Vuelve a ingresar la contrasenia">
+                        <input type="password" class="form-control" required name="contrasenia_confirmacion" id="contrasenia_confirmacion" placeholder="Vuelve a ingresar la contrasenia" minlength="8" maxlength="20">
                     </div>
                     <div class="form-group">
                         <label for="contacto">Contacto</label>
-                        <textarea type="text" class="form-control" name="contacto" id="contacto" placeholder="Ingresar los datos de contacto">                            
+                        <textarea type="text" class="form-control" name="contacto" id="contacto" placeholder="Ingresar los datos de contacto" maxlength="70">                            
                         </textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Aceptar</button>
