--- a/App/templates/usuario/modificarUsuario.html
+++ b/App/templates/usuario/modificarUsuario.html
@@ -21,11 +21,11 @@
                     </div>-->
                     <div class="form-group">
                         <label for="contraseniaNueva">Nueva contraseña del usuario</label>
-                        <input value="{{data['contrasenia']}}" type="password" class="form-control" name="contraseniaNueva" id="contraseniaNueva" placeholder="Ingresar la nueva contrasenña del usuario">
+                        <input value="{{data['contrasenia']}}" required type="password" class="form-control" name="contraseniaNueva" id="contraseniaNueva" placeholder="Ingresar la nueva contrasenña del usuario" minlength="8" maxlength="20">
                     </div>
                     <div class="form-group">
                         <label for="contactoNuevo">Contacto del usuario</label>
-                        <input type="text" value="{{data['Contacto']}}" class="form-control" name="contactoNuevo" id="contactoNuevo">
+                        <input type="text" value="{{data['Contacto']}}" class="form-control" name="contactoNuevo" id="contactoNuevo" maxlength="70">
 
                     </div>
                     <div class="form-group">
