Se crea la seccion MI CUENTA para el administrador y se agregan validaciones en los formularios de alta y modificacion del combos

--- a/App/templates/combo/altaCombo.html
+++ b/App/templates/combo/altaCombo.html
@@ -9,7 +9,7 @@
         <form action="guardarCombo" method="POST">
             <div class="form-group">
                 <label for="nombre">Nombre del combo</label>
-                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre del combo">
+                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre del combo" maxlength="50">
             </div>
             <!-- <div class="form-group">
                 <label for="precio">Precio Total</label>
