--- a/App/templates/navbars/navbar_admin.html
+++ b/App/templates/navbars/navbar_admin.html
@@ -34,7 +34,7 @@
 			<ul>
 				<li><a href="#"><i style="font-size: 30px;" class='fas fa-user'></i></a>
 					<ul>
-						<li style="right: 100%;padding-top: 40px;"><a href="miCuenta">Mi cuenta</a></li>
+						<li style="right: 100%;padding-top: 40px;"><a href="miCuenta_admin">Mi cuenta</a></li>
 						<li style="right: 100%"><a href="salir">Salir</a></li>
 					</ul>
 				</li>
