--- a/App/templates/combo/modificarCombo.html
+++ b/App/templates/combo/modificarCombo.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="form-group">
                         <label for="nombreNuevo">Nuevo nombre del combo</label>
-                        <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Nuevo nombre del combo">
+                        <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Nuevo nombre del combo" maxlength="50">
                     </div>
                     <div></div>
                     <a href="{{ url_for('editarProductosDelCombo')}}/{{id}}" class="btn btn-ej">Modificar los productos del combo</a>
