Nuevo navbar para usuario administrador/vendedor y se quita el paginado de los ABMC

--- a/App/templates/combo/comboABMC.html
+++ b/App/templates/combo/comboABMC.html
@@ -49,8 +49,8 @@
                         <h1 class="display-5" style="padding-top: 70px;">Combos</h1>
                         <hr class="my-4">
                         <a class="nuevo-abmc btn btn-success" href="{{ url_for('altaCombo') }}"><i class="far fa-plus-square"></i> Nuevo</a>
-
-                        <table id="tablaCombo" data-classes="table table-bordered table-hover table-striped shadow" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-pagination="true" data-height="500">
+                        <table id="tablaCombo" data-classes="table table-bordered table-hover table-striped shadow" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-height="500"></table>
+                        <!-- <table id="tablaCombo" data-classes="table table-bordered table-hover table-striped shadow" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-pagination="true" data-height="500"> -->
                         </table>
                     </div>
                 </div>
