--- a/App/templates/combo/mostrarComboAlUsuarioNoLog.html
+++ b/App/templates/combo/mostrarComboAlUsuarioNoLog.html
@@ -24,8 +24,8 @@
     <div class="d-flex" id="wrapper">
         {% include 'navbars/sidebar_usuarios.html' %}
         <div id="page-content-wrapper">
+            {% include 'navbars/navbar_nologueado.html' %}
             <div class="container p-2">
-                <a class="btn btn-danger" href="/listarCombo" role="button">Volver</a>
                 <center>        
                     <h2>{{dato['nombreCombo']}}</h2>
                     <div class="form-group">
@@ -43,14 +43,6 @@
                         <div class="form-group">
                             <label for="total">Total con descuento: ${{dato['totalConDescuento']}}</label>
                             <input readonly value="{{dato['totalConDescuento']}}" type="hidden" class="form-control" name="totalConDescuento" id="totalConDescuento" placeholder="Total con Descuento">
-                        </div>
-                        <div>
-                            <form action="agregarComboAlCarrito" method="POST">
-                                <div class="btn btn-success">
-                                    <input value="{{id}}" type="hidden" class="form-control" name="id" id="id">
-                                    <button class="btn-comprar" type="submit"><span class="fa fa-cart-plus"></span></button>
-                                </div>
-                            </form>
                         </div>
                     </div>
 
