--- a/App/templates/usuario/usuarioABMC.html
+++ b/App/templates/usuario/usuarioABMC.html
@@ -7,8 +7,7 @@
         {% include 'navbars/sidebar.html' %}
 
         <div id="page-content-wrapper">
-            {% include 'navbars/navbar_admin.html' %}
-
+            {% include 'navbars/navbar_admin_horizontal.html' %}
             <div class="container-fluid">
                 {% if data == "eliminado" %}
                 <div class="row">
@@ -22,14 +21,14 @@
                     </div>
                 </div>
                 {%endif%}
-                <div class="row" style="margin-top: 70px;">
+                <div class="row" style="margin-top: 40px;">
                     <div class="col-lg-12 p-2">
 
                         <h1 class="display-5">Usuarios</h1>
                         <hr class="my-4">
                         <a class="nuevo-abmc btn btn-success" href="{{ url_for('altaUsuario') }}"><i class="far fa-plus-square"></i> Nuevo</a>
-
-                        <table id="tablaUsuario" data-classes="table table-bordered table-hover  table-striped" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-pagination="true" data-height="500">
+                        <table id="tablaUsuario" data-classes="table table-bordered table-hover  table-striped" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-height="500"></table>
+                        <!-- <table id="tablaUsuario" data-classes="table table-bordered table-hover  table-striped" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-pagination="true" data-height="500"> -->
                         </table>
                     </div>
                 </div>
