--- a/App/templates/header/header.html
+++ b/App/templates/header/header.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>App Flask</title>
+    <title>e-Shop</title>
     <!--CSS-->
     <!--Bootstrap 4-->
     <!--
