Se corrige la carga de imagenes de los productos

--- a/App/templates/tipoProducto/modificarTipoProducto.html
+++ b/App/templates/tipoProducto/modificarTipoProducto.html
@@ -15,7 +15,7 @@
                         </div>
                         <div class="form-group">
                             <label for="nombreNuevo">Nuevo nombre del tipo de producto</label>
-                            <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar el nuevo nombre del tipo de producto">
+                            <input type="text" class="form-control" required name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar el nuevo nombre del tipo de producto" maxlength="150">
                         </div>
                         <button type="submit" class="btn btn-primary">Aceptar</button>
                         <a class="btn btn-danger" href="/tipoProductoABMC" role="button">Cancelar</a>
