--- a/App/templates/tipoProducto/altaTipoProducto.html
+++ b/App/templates/tipoProducto/altaTipoProducto.html
@@ -13,7 +13,7 @@
                     <form action="guardarTipoProducto" method="POST">
                         <div class="form-group">
                             <label for="nombre">Nombre del tipo de producto</label>
-                            <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del tipo">
+                            <input type="text" class="form-control" required name="nombre" id="nombre" placeholder="Ingresar nombre del tipo" maxlength="150">
                         </div>
                         <button type="submit" class="btn btn-primary">Aceptar</button>
                         <a class="btn btn-danger" href="/tipoProductoABMC" role="button">Cancelar</a>
