--- a/App/templates/producto/fichaProducto.html
+++ b/App/templates/producto/fichaProducto.html
@@ -95,18 +95,26 @@
                     <section class="awSlider">
                       <div  class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner" role="listbox">
-                          {% for foto in range(cantidadFotos) %}
-                            {% if foto == 0 %}
-                              <div class="item active">
-                                <img class="imagen" src="{{fotos[foto][0]}}">
-                              </div>
-                            {%endif%}
-                            {% if foto != 0 %}
-                              <div  class="item">
-                                <img class="imagen" src="{{fotos[foto][0]}}">
-                              </div>
-                            {%endif%}
-                          {%endfor%}
+                          {% if cantidadFotos == 0 %}
+                            <div class="item active">
+                              <img class="imagen" src="..\static\img\producto-default.png">
+                            </div>
+                          {%endif%}
+
+                          {% if cantidadFotos != 0 %}
+                            {% for foto in range(cantidadFotos) %}
+                              {% if foto == 0 %}
+                                <div class="item active">
+                                  <img class="imagen" src="{{fotos[foto][0]}}">
+                                </div>
+                              {%endif%}
+                              {% if foto != 0 %}
+                                <div  class="item">
+                                  <img class="imagen" src="{{fotos[foto][0]}}">
+                                </div>
+                              {%endif%}
+                            {%endfor%}
+                          {%endif%}
                         </div>
                     
                         <!-- Controls -->
