--- a/App/templates/producto/verProducto.html
+++ b/App/templates/producto/verProducto.html
@@ -106,7 +106,6 @@
     <div class="d-flex" id="wrapper">
         {% include 'navbars/sidebar_usuarios.html' %}
         <div id="page-content-wrapper">       
-            <!-- <a href="{{ url_for('listarProductos') }}" class="btn btn-success"><span class="fa fa-arrow-left"></span></a> -->
             <div class="container p-2">
               <div class="card-deck">
                   <div class="card">
@@ -116,6 +115,13 @@
                         <section class="awSlider">
                         <div  class="carousel slide" data-ride="carousel">
                           <div class="carousel-inner" role="listbox">
+                            {% if cantidadFotos == 0 %}
+                              <div class="item active">
+                                <img class="imagen" src="..\static\img\producto-default.png">
+                              </div>
+                            {%endif%}
+
+                          {% if cantidadFotos != 0 %}
                             {% for foto in range(cantidadFotos) %}
                               {% if foto == 0 %}
                                 <div class="item active">
@@ -128,6 +134,7 @@
                                 </div>
                               {%endif%}
                             {%endfor%}
+                          {%endif%}
                           </div>
                       
                           <!-- Controls -->
