--- a/App/templates/ejemplar/ejemplarEliminado.html
+++ b/App/templates/ejemplar/ejemplarEliminado.html
@@ -2,12 +2,59 @@
 <html lang="en">
 {% include 'header/header.html' %}
 
+<head>
+    <style>
+        .mensaje1{
+            text-align: center;
+            color: olive;
+            font-size: 30px;
+            display:block;
+            margin:auto;
+            margin-top: 130px;
+            margin-bottom: 50px;
+        }
+        .mensaje2{
+            text-align: center;
+            color: tomato;
+            font-size: 30px;
+            display:block;
+            margin:auto;
+            margin-top: 130px;
+            margin-bottom: 50px;
+        }
+        .btn-ej{
+                background-color: #18BC9C;
+                font-size: 20px;
+                margin-right:5px;
+                margin-left:5px;
+                margin-bottom:15px;
+                padding: 5px 10px 5px 10px;
+                border: none;
+                border-radius: 10px;
+                color:whitesmoke;
+                display:block;
+                margin:auto;
+                text-align: center;
+                width: 150px;
+            }
+    </style>
+</head>
+
 <body>
-    {% if data == 1 %}
-    <h2>Ejemplar eliminado!</h2>
-    {% else %}
-    <h2>Ejemplar no existe!</h2>
-    {% endif %}
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
+
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar_admin.html' %}
+            
+            {% if data == 1 %}
+                <div class="mensaje1">El ejemplar fue eliminado</div>
+            {% else %}
+                <div class="mensaje1">El ejemplar {{numeroSerie}} no existe</div>
+            {% endif %}
+        </div>
+    </div>
+    {% include 'footer/footer.html' %}
 </body>
 
 </html>
