--- a/App/templates/combo/cargarProductosAlCombo.html
+++ b/App/templates/combo/cargarProductosAlCombo.html
@@ -2,6 +2,53 @@
 <html lang="en">
 {% include 'header/header.html' %}
 
+<head>
+    <style>
+        .tabla{
+            display:block;
+            margin:auto;
+            text-align: center;
+            width: 80%;
+            padding-top: 15px;
+        }
+        .numero{
+            width: 300px;
+        }
+        .estado{
+            width: 450px;
+        }
+        .accion{
+            width: 50px;
+        }
+        th{
+            color: black;
+            font-size: 20px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+        td{
+            font-size: 20px;
+            padding-top: 7px;
+            padding-bottom: 7px;
+            border-color: green;
+            color: black;
+            border-top: gray 1px solid;
+            border-bottom: gray 1px solid;
+        }
+        .botones{
+            border: transparent;
+            text-align: center;
+            width: 100px;
+        }
+        .eliminar{
+        background-color: transparent;
+        border: none;
+        font-size: 26px;
+        padding: 10px;
+        }
+    </style>
+</head>
+
 <body>
     <div class="d-flex" id="wrapper">
         {% include 'navbars/sidebar.html' %}
@@ -89,26 +136,31 @@
                         </div>
                     </div>
 
-                    <div class="container-fluid">
-                        {% if marcador == "eliminado" %}
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="m-2 alert alert-success alert-dismissible fade show" role="alert">
-                                    <strong>Ejemplar eliminado!</strong>
-                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                                </div>
-                            </div>
-                        </div>
-                        {%endif%}
-                        <div class="row">
-                            <div class="col-12 p-2">
-                                <table id="tablaProductosCombo" data-classes="table table-bordered table-hover table-striped shadow" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="false" data-show-columns="false" data-pagination="true" data-height="500">
-                                </table>
-                            </div>
-                        </div>
-                    </div>
+                    <table class="tabla">
+                        <tr>
+                            <th class="numero">N° de serie</th>
+                            <th class="estado">Nombre</th>
+                            <th class="estado">Precio</th>
+                            <th class="estado">Acciones</th>
+                        </tr>
+                        {% for e in dato['ejemplares'] %}
+                            <tr>
+                                <td>{{ e[1] }}</td>
+                                <td>{{ e[4] }}</td>
+                                <td>{{ e[5] }}</td>      
+                                <td class="botones">
+                                  <form action="eliminarEjemplar_combo" method="POST">
+                                      <div>
+                                          <input value="{{e[1]}}" type="hidden" class="form-control" name="numeroSerie" id="numeroSerie">
+                                          <input value="{{e[0]}}" type="hidden" class="form-control" name="idCombo" id="idCombo">
+                                          <button class="eliminar" type="submit"><i class="fa fa-trash" aria-hidden="true"></i></button>
+                                      </div>
+                                  </form>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+
 
                     <a href="{{ url_for('comboABMC')}}" class="btn-ej">Volver</a>
                 </center>
@@ -118,64 +170,5 @@
     {% include 'footer/footer.html' %}
 </body>
 
-
-<script>
-    $('document').ready(function() {
-        var columns = [{
-            field: "numeroSerie",
-            title: "Numero de serie",
-            sortable: true,
-            width: "30"
-        }, {
-            field: "nombre",
-            title: "Nombre",
-            sortable: true,
-            width: "30"
-        }, {
-            field: "precio",
-            title: "Precio",
-            sortable: true,
-            width: "10"
-        }, {
-            field: 'operate',
-            title: 'Acciones',
-            width: "30",
-            // align: 'center',
-            //valign: 'middle',
-            clickToSelect: false,
-            formatter: function(value, row, index) {
-                var urlEliminar = '{{ url_for("eliminarEjemplar_combo") }}';
-                var html = '';
-                html += '<a class="eliminar btn btn-danger m-2" href=' + urlEliminar + '/' + row.numeroSerie + '/' + idCombo + '><i class="fas fa-trash"></i></a>';
-                return html;
-            }
-        }]
-
-        var idCombo = "{{id}}";
-
-        $('#tablaProductosCombo').bootstrapTable({
-            url: "{{ url_for('productos_combo_data_table') }}/" + idCombo, //Obtiene los datos desde el backend, formato json 
-            columns: columns,
-            locale: "es-ES",
-            showRefresh: false,
-        });
-
-
-        $('#verRol1').click(function(e) {
-            $('#myModal').modal('toggle');
-        });
-
-        $('.eliminar').click(function(e) {
-            alert()
-            var r = confirm("¿Desea quitar este producto del combo?");
-
-            if (r == true) {
-                location.href('/eliminarEjemplar_combo/' + numeroSerie + '/' + idCombo)
-            } else {
-                e.preventDefault();
-            }
-        });
-    });
-</script>
 
 </html>
