login Redes Sociales: conecion backend

--- a/App/templates/login/login_redes.html
+++ b/App/templates/login/login_redes.html
@@ -11,7 +11,7 @@
                 <div id="login_form" class="card">
                     <div id="login_form" class="card-body">
 
-                        <div class="form-signin form-group">
+                        <!-- <div class="form-signin form-group">
                             <h1 class="h3 mb-3 font-weight-normal">Binvenido</h1>
                             <div class="form-group">
                                 <label for="inputEmail " class="sr-only ">Email</label>
@@ -32,28 +32,28 @@
                                 <div class="col">
                                     <button id="btnSingOut" class="btn btn-md btn-danger btn-block ">Sign Out</button>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <button id="btnFacebookSingIn" class="btn btn-md btn-primary">
+                            </div>-->
+                        <div class="row">
+                            <div class="col-md-6">
+                                <button id="btnFacebookSingIn" class="btn btn-md btn-primary">
                              <i class="fab fa-facebook-square"></i> Facebook
                         </button>
-                                    <button id="btnGoogleSingIn" class="btn btn-md btn-primary"> 
+                                <button id="btnGoogleSingIn" class="btn btn-md btn-primary"> 
                             <i class="fab fa-google"></i> Google
                         </button>
-                                </div>
-                                <!--<div class="col-6">
+                            </div>
+                            <!--<div class="col-6">
                             <button id="btnGoogleSingIn" class="btn btn-lg btn-primary"> 
                             <i class="fab fa-google"></i> Google
                         </button>
                         </div>-->
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
+
+    </div>
     </div>
 
 
