--- a/App/templates/usuario/miCuenta.html
+++ b/App/templates/usuario/miCuenta.html
@@ -53,6 +53,7 @@
                 <div class="titulo"> Mi cuenta </div>
                 <div class="cuerpo">
                     Email: {{session['email']}}
+                    Tipo de usuario: {{rol}}
                     <div style="margin-top: 30px;">
                         <a href="{{ url_for('cambiarContrasenia')}}/{{session['email']}}" class="btn-ej">Cambiar contraseña</a>
                     </div>
