login Redes Sociales: revision de sesion

--- a/App/templates/login/login_redes.html
+++ b/App/templates/login/login_redes.html
@@ -40,7 +40,8 @@
                         </button>
                                 <button id="btnGoogleSingIn" class="btn btn-md btn-primary"> 
                             <i class="fab fa-google"></i> Google
-                        </button>
+                        </button> Si activo redirect de sesion <br>[PRIMERO loeguese con google y luego vuelva a inicio ]-->
+                                <a href="/">VOLVER al inicio</a>
                             </div>
                             <!--<div class="col-6">
                             <button id="btnGoogleSingIn" class="btn btn-lg btn-primary"> 
