--- a/App/templates/usuario/crearUsuario.html
+++ b/App/templates/usuario/crearUsuario.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include 'header/header.html' %}
+
 <head>
     <style>
-        .container{
+        .container {
             width: 400px;
             padding-top: 50px;
         }
-        h2{
+        
+        h2 {
             text-align: center;
         }
     </style>
@@ -22,19 +24,19 @@
 
             <div id="page-content-wrapper" style="margin-top: 70px;">
                 <div class="container">
-                    <h2>Registro de usuario</h2>
+                    <h2>Registro de usuarioKKKKKK</h2>
                     <form action="guardarUsuario" method="POST">
                         <div class="form-group">
                             <label for="nombreUsuario">Email</label>
-                            <input type="email" class="form-control" name="nombreUsuario" id="nombreUSuario" placeholder="Ingresar su email">
+                            <input type="email" class="form-control" required name="nombreUsuario" id="nombreUSuario" placeholder="Ingresar su email" maxlength="150">
                         </div>
                         <div class="form-group">
                             <label for="contrasenia">Contraseña</label>
-                            <input type="password" class="form-control" name="contrasenia" id="contrasenia" placeholder="Ingresar la contraseña">
+                            <input type="password" class="form-control" required name="contrasenia" id="contrasenia" placeholder="Ingresar la contraseña" minlength="8" maxlength="20">
                         </div>
                         <div class="form-group">
                             <label for="contrasenia_confirmacion">Confirmar contraseña</label>
-                            <input type="password" class="form-control" name="contrasenia_confirmacion" id="contrasenia_confirmacion" placeholder="Vuelve a ingresar la contraseña">
+                            <input type="password" class="form-control" required name="contrasenia_confirmacion" id="contrasenia_confirmacion" placeholder="Vuelve a ingresar la contraseña" minlength="8" maxlength="20">
                         </div>
                         <div class="form-group">
                             <label for="contacto">Otros datos de contacto</label>
@@ -48,7 +50,7 @@
             </div>
 
         </div>
-        
+
     </div>
 </body>
 
