--- a/App/templates/usuario/crearUsuario.html
+++ b/App/templates/usuario/crearUsuario.html
@@ -24,7 +24,7 @@
 
             <div id="page-content-wrapper" style="margin-top: 70px;">
                 <div class="container">
-                    <h2>Registro de usuarioKKKKKK</h2>
+                    <h2>Registro de usuario</h2>
                     <form action="guardarUsuario" method="POST">
                         <div class="form-group">
                             <label for="nombreUsuario">Email</label>
@@ -32,15 +32,15 @@
                         </div>
                         <div class="form-group">
                             <label for="contrasenia">Contraseña</label>
-                            <input type="password" class="form-control" required name="contrasenia" id="contrasenia" placeholder="Ingresar la contraseña" minlength="8" maxlength="20">
+                            <input type="password" class="form-control" required name="contrasenia" id="contrasenia" placeholder="Ingresar la contraseña" minlength="5" maxlength="20">
                         </div>
                         <div class="form-group">
                             <label for="contrasenia_confirmacion">Confirmar contraseña</label>
-                            <input type="password" class="form-control" required name="contrasenia_confirmacion" id="contrasenia_confirmacion" placeholder="Vuelve a ingresar la contraseña" minlength="8" maxlength="20">
+                            <input type="password" class="form-control" required name="contrasenia_confirmacion" id="contrasenia_confirmacion" placeholder="Vuelve a ingresar la contraseña" minlength="5" maxlength="20">
                         </div>
                         <div class="form-group">
                             <label for="contacto">Otros datos de contacto</label>
-                            <textarea type="text" class="form-control" name="contacto" id="contacto" placeholder="Ingresar los datos de contacto">                            
+                            <textarea type="text" class="form-control" name="contacto" id="contacto" placeholder="Ingresar los datos de contacto" maxlength="70">                            
                             </textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Aceptar</button>
