--- a/App/templates/usuario/crearUsuarioPorUsuario.html
+++ b/App/templates/usuario/crearUsuarioPorUsuario.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include 'header/header.html' %}
+
 <head>
     <style>
-        .container{
+        .container {
             width: 400px;
             padding-top: 20px;
         }
-        h2{
+        
+        h2 {
             text-align: center;
         }
     </style>
@@ -26,19 +28,19 @@
                     <form action="guardarUsuario" method="POST">
                         <div class="form-group">
                             <label for="nombreUsuario">Email</label>
-                            <input type="email" class="form-control" name="nombreUsuario" id="nombreUSuario" placeholder="Ingresar su email">
+                            <input type="email" class="form-control" required name="nombreUsuario" id="nombreUSuario" placeholder="Ingresar su email" maxlength="150">
                         </div>
                         <div class="form-group">
                             <label for="contrasenia">Contraseña</label>
-                            <input type="password" class="form-control" name="contrasenia" id="contrasenia" placeholder="Ingresar la contraseña">
+                            <input type="password" class="form-control" required name="contrasenia" id="contrasenia" placeholder="Ingresar la contraseña" minlength="5" maxlength="20">
                         </div>
                         <div class="form-group">
                             <label for="contrasenia_confirmacion">Confirmar contraseña</label>
-                            <input type="password" class="form-control" name="contrasenia_confirmacion" id="contrasenia_confirmacion" placeholder="Vuelve a ingresar la contraseña">
+                            <input type="password" class="form-control" required name="contrasenia_confirmacion" id="contrasenia_confirmacion" placeholder="Vuelve a ingresar la contraseña" minlength="5" maxlength="20">
                         </div>
                         <div class="form-group">
                             <label for="contacto">Otros datos de contacto</label>
-                            <textarea type="text" class="form-control" name="contacto" id="contacto" placeholder="Ingresar los datos de contacto">                            
+                            <textarea type="text" class="form-control" name="contacto" id="contacto" placeholder="Ingresar los datos de contacto" maxlength="70">                            
                             </textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Aceptar</button>
@@ -47,7 +49,7 @@
             </div>
 
         </div>
-        
+
     </div>
 </body>
 
