incorporacion de footer en usuario y marca

--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -1,5 +1,6 @@
 body {
     overflow-x: hidden;
+    color: black;
 }
 
 #sidebar-wrapper {
@@ -52,6 +53,8 @@ body {
     position: sticky;
     bottom: 0;
     overflow: auto;
+    height: 40px;
+    color: black;
 }
 
 
