--- a/App/templates/marca/marcaEliminada.html
+++ b/App/templates/marca/marcaEliminada.html
@@ -7,7 +7,7 @@
     <h2>Marca Eliminada!</h2>
     {% else %}
     <h2>Marca no existe!</h2>
-    {% endif %}
+    {% endif %} {% include 'footer/footer.html' %}
 </body>
 
 </html>
