--- a/App/templates/marca/bajaMarca.html
+++ b/App/templates/marca/bajaMarca.html
@@ -12,11 +12,12 @@
                 <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre de la marca">
             </div>
             <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
+            <a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
     </div>
+    {% include 'footer/footer.html' %}
 </body>
 
 </html>
