--- a/App/templates/marca/marcaGuardada.html
+++ b/App/templates/marca/marcaGuardada.html
@@ -7,7 +7,7 @@
     <h2>Marca dada de alta!</h2>
     {% else %}
     <h2>La marca ya existe</h2>
-    {% endif %}
+    {% endif %} {% include 'footer/footer.html' %}
 </body>
 
 </html>
